# libpdk

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  install
include/pdk/: CMakeLists.txt  Config.h.in  cmakelists.txt  config.h.in  version.h.in
include/pdk/base/: CMakeLists.txt
include/pdk/base/ds/: BitArray.h  ByteArray.h  ByteArrayBuilder.h  ByteArrayMatcher.h  CMakeLists.txt  PodList.h  StringList.h  VarLengthArray.h
include/pdk/base/io/: Buffer.h  CMakeLists.txt  DataStream.h  Debug.h  IoDevice.h  LoggingCategory.h  TextStream.h
include/pdk/base/lang/: CMakeLists.txt  Character.h  String.h  StringAlgorithms.h  StringBuilder.h  StringIterator.h  StringLiteral.h  StringMatcher.h  StringView.h
include/pdk/base/text/: RegularExpression.h
include/pdk/base/time/: Date.h  DateTime.h  Datetime.h  Time.h  TimeZone.h  Timezone.h
include/pdk/base/utils/: CommandLineOption.h  CommandLineParser.h
include/pdk/dll/: FactoryInterface.h  Library.h  Plugin.h  PluginLoader.h  Uuid.h
include/pdk/dll/internal/: ElfParserPrivate.h  FactoryLoaderPrivate.h  LibraryPrivate.h  MachParserPrivate.h  SystemLibraryPrivate.h
include/pdk/global/: CMakeLists.txt  CompilerDetection.h  Endian.h  EnumDefs.h  Flags.h  Global.h  GlobalStatic.h  LibraryInfo.h  Logging.h  Numeric.h  PlatformDefs.h  ProcessorDetection.h  Random.h  SysInfo.h  SystemDetection.h  TypeInfo.h  TypeTraits.h  Windows.h  processordetection.h
include/pdk/global/internal/: ArchDetechPrivate.h  EndianPrivate.h  HooksPrivate.h  NumericPrivate.h  PdkInternal.h  RandomPrivate.h
include/pdk/kernel/: AbstractEventDispatcher.h  AbstractNativeEventFilter.h  Algorithms.h  BasicTimer.h  CallableInvoker.h  CoreApplication.h  CoreEvent.h  CoreUnix.h  DeadlineTimer.h  ElapsedTimer.h  EventDispatcherCf.h  EventDispatcherUnix.h  EventLoop.h  EventdispatcherUnix.h  HashFuncs.h  Locale.h  Math.h  Object.h  Pointer.h  SocketNotifier.h  StringUtils.h  Timer.h  TimerInfoUnix.h
include/pdk/kernel/internal/: AbstractEventDispatcherPrivate.h  CfSocketNotifierPrivate.h  CoreApplicationPrivate.h  CoreCommandLineArgsPrivate.h  CoreGlobalDataPrivate.h  CoreMacPrivate.h  CoreUnixPrivate.h  DeadlineTimerPrivate.h  EventLoopPrivate.h  FunctionTrait.h  ObjectDefsPrivate.h  ObjectPrivate.h  PollPrivate.h  SingleShotTimerPrivate.h  StringAlgorithms.h  SystemErrorPrivate.h  TimerInfoUnixPrivate.h  TimerPrivate.h
include/pdk/kernel/signal/: Connection.h  Deconstruct.h  DeconstructPtr.h  DummyMutex.h  ExpiredSlot.h  LastValue.h  OptionalLastValue.h  SharedConnectionBlock.h  Signal.h  SignalBase.h  SignalType.h  Slot.h  SlotBase.h  Trackable.h  VariadicSignal.h  VariadicSlot.h
include/pdk/pal/kernel/: Simd.h
include/pdk/stdext/: Any.h  None.h  VisitEach.h
include/pdk/stdext/core/: Ref.h
include/pdk/stdext/iterators/: FunctionOutputIterator.h
include/pdk/stdext/optional/: BadAccess.h  Optional.h  OptionalFwd.h  OptionalIo.h
include/pdk/stdext/preprocessor/: Arithmetic.h  Array.h  AssertMsg.h  Cat.h  Comma.h  CommaIf.h  Comparison.h  Control.h  Debug.h  Dec.h  Empty.h  Enum.h  EnumParams.h  EnumParamsWithADefault.h  EnumParamsWithDefaults.h  EnumShifted.h  EnumShiftedParams.h  Expand.h  ExprIf.h  Facilities.h  For.h  Identity.h  If.h  Inc.h  Iterate.h  Iteration.h  Library.h  Limits.h  List.h  Logical.h  Max.h  Min.h  Punctuation.h  Repeat.h  Repeat2Nd.h  Repeat3Rd.h  RepeatFromTo.h  RepeatFromTo2Nd.h  RepeatFromTo3Rd.h  Repetition.h  (+7 more)
include/pdk/stdext/typetraits/: CallableInfoTrait.h  FunctionTraits.h  HasNothrowAssign.h  HasNothrowConstructor.h  HasNothrowCopy.h  HasNothrowDestructor.h  HasTrivialAssign.h  HasTrivialConstructor.h  HasTrivialCopy.h  HasTrivialDestructor.h  HasTrivialMoveAssign.h  HasTrivialMoveConstructor.h  Sequence.h
include/pdk/stdext/utility/: Algorithms.h  DisableIf.h  OptionalPointee.h
include/pdk/utils/: Cache.h  Collator.h  CryptographicHash.h  Funcs.h  Iterator.h  Locale.h  MemoryHelper.h  RefCount.h  Refcount.h  ScopedObjectGuard.h  ScopedPointer.h  SharedData.h  SharedPointer.h  Translator.h  VersionNumber.h
include/pdk/utils/internal/: CollatorPrivate.h  DoubleScanPrintPrivate.h  LocaleDataPrivate.h  LocalePrivate.h  LocaleToolsPrivate.h  LockFreeListPrivate.h  TranslatorPrivate.h
src/: CMakeLists.txt
src/dll/: ElfParser.cpp  FactoryInterface.cpp  FactoryLoader.cpp  Library.cpp  MachParser.cpp  PluginLoader.cpp  SystemLibrary.cpp  Uuid.cpp
src/dll/_platform/: LibraryUnix.cpp  LibraryWin.cpp  SystemLibraryWin.cpp
src/global/: CMakeLists.txt  Flags.cpp  Global.cpp  Hooks.cpp  LibraryInfo.cpp  Logging.cpp  Random.cpp
src/kernel/: AbstractEventDispatcher.cpp  AbstractNativeEventFilter.cpp  BasicTimer.cpp  CoreApplication.cpp  CoreEvent.cpp  CoreGlobalData.cpp  DeadlineTimer.cpp  ElapsedTimer.cpp  EventLoop.cpp  HashFuncs.cpp  Math.cpp  Object.cpp  Poll.cpp  SocketNotifier.cpp  StringUtils.cpp  SystemError.cpp  Timer.cpp
src/kernel/_platform/: CfSocketNotifier.cpp  CoreApplicationMac.cpp  CoreFoundationMac.mm  CoreMac.cpp  CoreMacObjc.mm  CoreUnix.cpp  ElapsedTimerMac.cpp  EventDispatcherCf.mm  EventDispatcherUnix.cpp  EventdispatcherUnix.cpp  TimerInfoUnix.cpp
src/modules/base/: CMakeLists.txt
src/modules/base/ds/: ArrayData.cpp  BitArray.cpp  ByteArray.cpp  ByteArrayMatcher.cpp  (+3 more)
src/pal/kernel/: Simd.cpp
src/utils/: Collator.cpp  CryptographicHash.cpp  Locale.cpp  LocaleTools.cpp  LockFreeList.cpp  MemoryHelper.cpp  Refcount.cpp  SharedPointer.cpp  Translator.cpp  VersionNumber.cpp
src/utils/_platform/: CollatorMac.cpp  CollatorPosix.cpp  LocaleMac.mm  LocaleUnix.cpp
unittests/base/: CMakeLists.txt
unittests/base/ds/: BitArrayTest.cpp  ByteArrayMatcherTest.cpp  ByteArrayTest.cpp  RingBufferTest.cpp  VarLengthArrayTest.cpp
unittests/base/io/: BufferTest.cpp  DebugTest.cpp  DirIteratorTest.cpp  DirTest.cpp  FileInfoTest.cpp  FileSystemEntryTest.cpp  FileTest.cpp  SettingTest.cpp  StorageInfoTest.cpp  TemporaryDirTest.cpp  TemporaryFileTest.cpp
unittests/base/lang/: CharacterTest.cpp  StringTest.cpp
unittests/base/text/: RegularExpressionTest.cpp
(+554 files in other folders)
