# the base module of libpdk

add_subdirectory(compress)
add_subdirectory(concurrent)
add_subdirectory(ds)
add_subdirectory(io)
add_subdirectory(lang)
add_subdirectory(math)
add_subdirectory(net)
add_subdirectory(os)
add_subdirectory(security)
add_subdirectory(text)
add_subdirectory(time)
add_subdirectory(utils)
